--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
           <div class="project-card">
             <h3>Project 2</h3>
-            <p>UI and UX Project</p>
+            <p>UI & UX Project</p>
           </div>
           <div class="project-card">
             <h3>Project 3</h3>
@@ -70,7 +70,7 @@
       <div class="container">
         <h2>About Me</h2>
         <p>
-          Experienced in web development, skilled in front-end technologies, and
+          Experienced in Web development, skilled in front-end technologies, and
           passionate about creating responsive, user-friendly websites. Adept at
           UI/UX design using tools like Figma.
         </p>
